--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -160,6 +160,7 @@
     &.booked {
       cursor: not-allowed;
       color: lighten($color-dark, 40%);
+    
 
       &::after {
         position: absolute;
@@ -171,8 +172,23 @@
         background: $color-dark;
         opacity: 0.4;
       }
-
     }
+    
+    &.chosen {
+      cursor: not-allowed;
+      color: lighten($color-dark, 40%);
+
+      &::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: $color-main;
+        opacity: 0.4;
+      }
+    } 
   }
 
   [data-table="1"] {
