--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -1,5 +1,5 @@
-.main-content {
-  margin: ($base-size / 2) 0;
+.main-wrapper {
+  margin: ($base-size * 3.5) auto;
   padding: ($base-size * 6) ($base-size * 4);
   background: $color-light;
   border-bottom: 1px solid lighten($color-dark, 70%);
